# cDreamLangV2

./: .gitignore  CMakeLists.txt  build.sh  compile_i18n.sh  config.json  config_en.json  config_zh.json  demo.sh  install.sh  test_config_zh.json
examples/: calculator.zv  error_test.zv  simple_error.zv  test.zv
examples/.tokens/: calculator.json  calculator.toml
include/config/: config_manager.h
include/i18n/: locale_manager.h  message_catalog.h
include/lexer/: lexical.h  lexical_exception.h  token.h  token_serialize.h  token_type.h
po/: dreamlang.pot  en_US.po  zh_CN.po
src/: main.cpp
src/config/: config_manager.cpp
src/i18n/: locale_manager.cpp  message_catalog.cpp
src/lexer/: lexical.cpp  lexical_exception.cpp  token.cpp  token_serialize.cpp  token_type.cpp
